# ESP_Display

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
Extras/: fonts.sh
components/ArduinoJson/: CMakeLists.txt
components/gui/: CMakeLists.txt  backlight.c  backlight.h  font_12.c  font_16.c  font_22.c  font_28.c  gui.h  init.cpp  light_tab.cpp  main_tab.cpp  styles.cpp  widgets.cpp  widgets.h
components/ha/: CMakeLists.txt  callback.cpp  callbacks.hpp  entities.cpp  entities.h  ha.cpp  ha.h  ha.hpp  ha_areas.cpp  ha_areas.h  ha_callbacks.cpp  ha_callbacks.h  ha_devices.cpp  ha_devices.h  ha_entities.cpp  ha_entities.h  ha_event.cpp  ha_event.h
components/websocket/: CMakeLists.txt  Kconfig  websocket.cpp  websocket.h
main/: CMakeLists.txt  Kconfig  backlight.c  backlight.h  httpd.c  httpd.h  main.c  spiffs.c  spiffs.h  wifi.c  wifi.h
spiffs/: config.json  index.html
